--- a/LRCircleRollingViewDemo/LRCircleRollingViewDemo/newses.plist
+++ b/LRCircleRollingViewDemo/LRCircleRollingViewDemo/newses.plist
@@ -6,31 +6,31 @@
 		<key>icon</key>
 		<string>img_01</string>
 		<key>title</key>
-		<string>微微一笑，很是倾城，顾漫作品</string>
+		<string>小狗</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_02</string>
 		<key>title</key>
-		<string>记忆中的东京爱情故事</string>
+		<string>愤怒的小鸟</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_03</string>
 		<key>title</key>
-		<string>剩得漫不经心，却又可歌可泣</string>
+		<string>炸弹💣</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_04</string>
 		<key>title</key>
-		<string>神秘空难事故揭秘</string>
+		<string>赛车</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_05</string>
 		<key>title</key>
-		<string>我朝人民都需要治愈，莫弃疗</string>
+		<string>EA888 v6发动机 烧机油杠杠地</string>
 	</dict>
 </array>
 </plist>
