--- a/LRCircleRollingViewDemo/LRCircleRollingViewDemo/newses.plist
+++ b/LRCircleRollingViewDemo/LRCircleRollingViewDemo/newses.plist
@@ -30,7 +30,7 @@
 		<key>icon</key>
 		<string>img_05</string>
 		<key>title</key>
-		<string>EA888 v6发动机 烧机油杠杠地</string>
+		<string>发动机</string>
 	</dict>
 </array>
 </plist>
